--- a/composer.json
+++ b/composer.json
@@ -17,23 +17,17 @@
   ],
   "require": {
     "php": "^8.3",
-    "illuminate/support": "^11.0",
-    "illuminate/routing": "^11.0",
-    "laravel/framework": "^11.0",
-    "laravel/passport": "^12.0"
+    "illuminate/support": "^11.0 || ^12.0",
+    "illuminate/routing": "^11.0 || ^12.0",
+    "laravel/framework": "^11.0 || ^12.0",
+    "laravel/passport": "^12.0 || ^13.0"
   },
   "require-dev": {
-    "pestphp/pest": "^v2.34.8",
-    "laravel/pint": "^v1.16.1"
+    "laravel/pint": "^v1.20.0"
   },
   "autoload": {
     "psr-4": {
       "XCoorp\\PassportIntrospection\\": "src"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "XCoorp\\PassportIntrospection\\Tests\\": "tests"
     }
   },
   "config": {
@@ -44,12 +38,7 @@
   },
   "scripts": {
     "lint": "pint -v",
-    "test:lint": "pint --test -v",
-    "test:coverage": "pest --coverage --min=100 --colors=always",
-    "test:unit": "pest --colors=always",
-    "test": [
-      "@test:unit"
-    ]
+    "test:lint": "pint --test -v"
   },
   "extra": {
     "laravel": {
