chore(deps): bump package versions
remove unused packages, update to latest packages

Signed-off-by: Tobias Oitzinger <tobias@xcoorp.com>

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "pestphp/pest-plugin": true
+      "php-http/discovery": true
     }
   },
   "scripts": {
