--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": "^8.3",
+    "php": "^8.3 || ^8.4",
     "illuminate/support": "^11.0 || ^12.0",
     "illuminate/routing": "^11.0 || ^12.0",
     "laravel/framework": "^11.0 || ^12.0",
