--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "illuminate/support": "^11.0 || ^12.0",
     "illuminate/routing": "^11.0 || ^12.0",
     "laravel/framework": "^11.0 || ^12.0",
-    "laravel/passport": "^12.0 || ^13.0"
+    "laravel/passport": "^13.0"
   },
   "require-dev": {
     "laravel/pint": "^v1.20.0"
